view: delete printf %s statement
In order to show well-look html. printf %s show up the view
in plain text way instead html well-look format.

--- a/tmpl/view.html
+++ b/tmpl/view.html
@@ -1,3 +1,18 @@
-<h1>{{.Title}}</h1>
-<p>[<a href="/edit/{{.Title}}">edit</a>]</p>
-<div>{{printf "%s" .Body}}</div>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>{{.Title}}</title>
+        <style>
+            body {
+                font-family: Open Sans;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>{{.Title}}</h1>
+        <p>[<a href="/edit/{{.Title}}">edit</a>]</p>
+        <div>{{.Body}}</div>
+    </body>
+</html>
